--- a/.github/workflows/static-deploy.yml
+++ b/.github/workflows/static-deploy.yml
@@ -1,13 +1,13 @@
-name: 간단한 배포 테스트
+name: 카페24 자동 배포
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     
     steps:
     - name: 코드 가져오기
@@ -27,56 +27,51 @@ jobs:
         NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
         NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
         
-    - name: SSH 연결 테스트 1 - 기본 정보
+    - name: 서버 디렉토리 준비
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.CAFE24_HOST }}
         username: ${{ secrets.CAFE24_USERNAME }}
         password: ${{ secrets.CAFE24_PASSWORD }}
         port: ${{ secrets.CAFE24_PORT }}
-        timeout: 30s
+        timeout: 60s
         script: |
-          echo "=== SSH 연결 성공 ==="
-          echo "현재 사용자: $(whoami)"
-          echo "현재 디렉토리: $(pwd)"
-          echo "=== 테스트 완료 ==="
+          # 기존 프로세스 종료
+          pkill -f "npm start" || true
+          pkill -f "next start" || true
           
-    - name: SSH 연결 테스트 2 - Node.js 확인
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.CAFE24_HOST }}
-        username: ${{ secrets.CAFE24_USERNAME }}
-        password: ${{ secrets.CAFE24_PASSWORD }}
-        port: ${{ secrets.CAFE24_PORT }}
-        timeout: 30s
-        script: |
-          echo "=== Node.js 환경 확인 ==="
-          which node || echo "Node.js 없음"
-          node --version || echo "Node.js 버전 확인 실패"
-          which npm || echo "npm 없음"
-          npm --version || echo "npm 버전 확인 실패"
-          echo "=== 환경 확인 완료 ==="
+          # 디렉토리 준비
+          mkdir -p /home/creditstory
           
-    - name: 간단한 배포 테스트
+    - name: 파일 업로드
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.CAFE24_HOST }}
         username: ${{ secrets.CAFE24_USERNAME }}
         password: ${{ secrets.CAFE24_PASSWORD }}
         port: ${{ secrets.CAFE24_PORT }}
-        source: ".next/*,package.json,next.config.ts"
-        target: "/home/creditstory-test/"
-        timeout: 120s
+        source: ".next,package.json,next.config.ts,src"
+        target: "/home/creditstory/"
+        timeout: 180s
         
-    - name: 배포 완료 확인
+    - name: 앱 실행
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.CAFE24_HOST }}
         username: ${{ secrets.CAFE24_USERNAME }}
         password: ${{ secrets.CAFE24_PASSWORD }}
         port: ${{ secrets.CAFE24_PORT }}
-        timeout: 30s
+        timeout: 120s
         script: |
-          echo "=== 배포 완료 확인 ==="
-          ls -la /home/creditstory-test/
-          echo "=== 성공! ===" 
+          cd /home/creditstory
+          npm install --production
+          nohup npm start > app.log 2>&1 &
+          
+          # 3초 대기 후 프로세스 확인
+          sleep 3
+          if pgrep -f "next start"; then
+            echo "✅ 배포 성공! 앱이 실행 중입니다."
+          else
+            echo "❌ 배포 실패! 로그 확인:"
+            tail -20 app.log
+          fi 
