--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.50.4",
+    "autoprefixer": "^10.4.21",
     "express": "^5.1.0",
     "next": "15.3.5",
     "react": "^19.0.0",
