리뉴얼사이트 api 배포수정1

--- a/.github/workflows/static-deploy.yml
+++ b/.github/workflows/static-deploy.yml
@@ -85,13 +85,17 @@ jobs:
           echo "📁 업로드된 파일 목록:"
           ls -la
           
-          # 기존 웹서버 중지
-          sudo systemctl stop apache2 2>/dev/null || true
-          sudo systemctl stop nginx 2>/dev/null || true
+          # 기존 웹서버 프로세스 찾기 및 중지 시도
+          echo "🔍 현재 실행 중인 웹서버 확인:"
+          ps aux | grep -E "(apache|nginx|httpd)" | grep -v grep || echo "웹서버 프로세스 없음"
           
-          # PM2로 앱 실행 (포트 80 사용)
+          # 포트 80 사용 중인 프로세스 확인
+          echo "🔍 포트 80 사용 프로세스:"
+          lsof -i:80 || echo "포트 80 사용 프로세스 없음"
+          
+          # PM2로 앱 실행 (포트 3000 사용, 나중에 프록시 설정)
           echo "🚀 PM2로 앱 시작..."
-          sudo NODE_ENV=production PORT=80 pm2 start npm --name "credit-app" -- start
+          NODE_ENV=production PORT=3000 pm2 start npm --name "credit-app" -- start
           pm2 save
           
           # 앱 상태 확인
@@ -100,12 +104,19 @@ jobs:
           pm2 list
           pm2 logs credit-app --lines 10 || true
           
-          # 포트 상태 확인
-          echo "🔍 포트 80 상태 확인:"
-          sudo lsof -i:80 || echo "포트 80이 사용되지 않고 있습니다"
+          # 포트 상태 최종 확인
           echo "🔍 포트 3000 상태 확인:"  
           lsof -i:3000 || echo "포트 3000이 사용되지 않고 있습니다"
+          echo "🔍 포트 80 상태 확인:"
+          lsof -i:80 || echo "포트 80이 사용되지 않고 있습니다"
           
-          # 도메인 연결 확인
-          echo "🌐 도메인 연결 테스트:"
-          curl -I http://localhost:80 || echo "포트 80 연결 실패"
+          # 앱 연결 테스트
+          echo "🌐 앱 연결 테스트:"
+          curl -I http://localhost:3000 || echo "포트 3000 연결 실패"
+          
+          # 서버 설정 확인
+          echo "📋 서버 환경 정보:"
+          whoami
+          pwd
+          which node
+          node --version
