--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.50.4",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "next": "15.3.5",
     "react": "^19.0.0",
