배포 워크플로우 수정: GitHub context 변수 제거 및 오류 처리 개선

--- a/.github/workflows/static-deploy.yml
+++ b/.github/workflows/static-deploy.yml
@@ -38,8 +38,6 @@ jobs:
         script: |
           echo "🚀 크레딧스토리 배포 시작"
           echo "📅 배포 시간: $(date)"
-          echo "🌿 배포 브랜치: ${{ github.ref }}"
-          echo "💾 커밋 해시: ${{ github.sha }}"
           
           # 기존 프로세스 안전하게 종료
           echo "🛑 기존 프로세스 종료"
@@ -76,7 +74,6 @@ jobs:
           # 빌드 결과 확인
           if [ -d ".next" ]; then
             echo "✅ .next 폴더 생성됨"
-            ls -la .next/
           else
             echo "❌ .next 폴더가 생성되지 않음"
             exit 1
@@ -93,7 +90,7 @@ jobs:
           # 상태 확인
           echo "📊 배포 상태 확인"
           pm2 list
-          pm2 logs creditstory --lines 10
+          pm2 logs creditstory --lines 10 || echo "로그 확인 실패"
           
           # 헬스체크
           echo "🔍 헬스체크"
