--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next build",
-    "start": "NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 next start",
+    "start": "cross-env NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.50.4",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "next": "15.3.5",
